# Optic-Reader

./: README.md
Optical-Form-Processing/: .gitignore  CALISTIRMA_TALIMATLARI.md  CMakeLists.txt
Optical-Form-Processing/include/core/: AnswerKey.hpp  BubbleDetector.hpp  CornerFinder.hpp  PerspectiveCorrector.hpp  ROIDetector.hpp
Optical-Form-Processing/src/: main.cpp
Optical-Form-Processing/src/core/: AnswerKey.cpp  BubbleDetector.cpp  CornerFinder.cpp  PerspectiveCorrector.cpp  ROIDetector.cpp
